--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html {
 }
 
 .blok {
-  background: url(../img/background_wood.jpeg) 100% center center no-repeat;
+  background: url(./img/background_wood.jpeg) 100% center center no-repeat;
   width: 100%;
   height: 100vh;
 }
@@ -59,13 +59,13 @@ html {
   min-width: 6vw;
   position: absolute;
   top: -35px;
-  background: url(../img/staroi_bumagi_header.jpeg) 100% no-repeat;
+  background: url(/img/staroi_bumagi_header.jpeg) 100% no-repeat;
   border-radius: 5px;
 }
 .blok .tabs .content {
   display: none;
   position: relative;
-  background: url(../img/staroi_bumagi.jpeg) 100% no-repeat;
+  background: url(img/staroi_bumagi.jpeg) 100% no-repeat;
   box-shadow: 54px 40px 83px -25px rgb(0, 0, 0);
   min-width: 100%;
 }
